<resources>
    <string name="app_name" translatable="false">OtusHomework-01</string>
    <string name="movie_1_title" translatable="false">Изгой</string>
    <string name="movie_1_desc" translatable="false">2000, США\nдрама, мелодрама\n2 ч 23 мин\nРежиссер: Роберт Земекис\nВ главных ролях: Том Хэнкс, Хелен Хант, Крис Нот</string>
    <string name="movie_1_about" translatable="false">Блестящий моноспектакль Тома Хэнкса при участии желтого шарика Уилсона стал культовой классикой и разошелся на мемы и цитаты. Инспектор FedEx Чак Ноланд после авиакатастрофы попадает на необитаемый остров и за четыре года из офисного тюфячка превращается в подтянутого мускулистого бородача, способного наловить рыбы самодельным гарпуном. Хэнксу пришлось потратить целый год, чтобы сбросить 20 кг (Кристиана Бэйла с его диетой «Я просто бросил есть» тогда еще на голливудском олимпе не было). Примечательно, что действие фильма начинается в Москве, где Ноланд организует работу филиала FedEx на пару с местными (одного из них играет Дмитрий Дюжев). «Изгой», конечно же, одна из многочисленных версий экранизации «Робинзона Крузо», но самая трогательная. Вспомните, как Ноланд кричал, теряя друга Уилсона, и утрите слезы. Хэнксу за такой накал пророчили «Оскар», но он уступил победу Расселу Кроу за «Гладиатора». Однако вернемся к нашей теме: «Изгой» — яркий пример не только вынужденной самоизоляции, но и пользы, которую из нее можно извлечь. Главное правило — дисциплина, терпение, вера в себя и друзья для общения.</string>
    <string name="movie_2_title" translatable="false">Марсианин</string>
    <string name="movie_2_desc" translatable="false">2015, Великобритания, США\nфантастика, приключения\n2 ч 24 мин\nРежиссер: Ридли Скотт\nВ главных ролях: Мэтт Дэймон, Джессика Честейн, Чиветель Эджиофор</string>
    <string name="movie_2_about" translatable="false">Еще один космический изгой, вынужденный коротать время на необитаемой планете, и никакого Уилсона в помощь! Судьба инженера и биолога Марка Уотни (Мэтт Дэймон) трагикомична: свои же бросили беднягу на Марсе, посчитав мертвым, и ему пришлось четыре года держаться до прилета следующей миссии. Эпический для россиянина момент наступил, когда Уотни сообразил, как вырастить на Марсе картошку. В целом будни биолога — инструкция на все времена: ноль паники, железная выдержка, физический труд, мозговой штурм по открытию новых возможностей (картошка!), немного развлечений (диско в случае нашего героя) и стримы в соцсетях (Уотни записывал видеодневники). При таком подходе можно справиться с любой изоляцией, главное, чтобы хватило запасов воздуха и чувства юмора. С последним у героя и фильма Ридли Скотта, в отличие от книги, все в порядке.</string>
    <string name="movie_3_title" translatable="false">Я - Легенда</string>
    <string name="movie_3_desc" translatable="false">2007, США\nфантастика, триллер\n1 ч 36 мин\nРежиссер: Френсис Лоуренс\nВ главных ролях: Уилл Смит, Алиси Брага, Чарли Тахэн</string>
    <string name="movie_3_about" translatable="false">В мире, где вирус кори мутировал и уничтожил половину человечества, а другую превратил в вампиров, выжил лишь Уилл Смит и показал нам, как надо действовать, если ты попал в эпицентр апокалипсиса. Первое, что нужно сделать, — купить дробовик, плащ и собаку. Второе — все та же дисциплина: проснулся, упал-отжался, съел весь завтрак, поиграл в гольф, собрал урожай, посмотрел «Шрека», поговорил с манекенами в магазине, сходил на охоту. Распорядок — залог выживания. Собака — залог прогулок, в нашей реальности пусть и ограниченных метрами. Философия книги Ричарда Мэтисона, ставшая основой для фильма Френсиса Лоуренса, убрана здесь за ненадобностью. Смит всегда играет только положительных героев без какого-либо страха и упрека (ну, разве что может пострадать от вынужденного алкоголизма), поэтому его Роберт Невилл не неврастеник и монстр, а подполковник медслужбы, способный сразиться с мутантами врукопашную. В свое время многие критики отмечали, как эффектно выглядит пустынный Нью-Йорк постапокалиптического 2012 года в картине. Что ж, теперь можно оценить этот эффект в режиме реального времени, выглянув в окно. Не забываем только отжиматься и питаться правильно.</string>
    <string name="details_btn_caption">Детали</string>
    <string name="invite_btn_caption">Пригласить друзей</string>
    <string name="invite_msg" translatable="false">Не будет ли Вам угодно посетить сеанс фильма \'%s\' в моей компании?</string>
    <string name="comment_label">Отзыв</string>
    <string name="comment_button">Оставить отзыв</string>
    <string name="comment_hint">Ведите комментарий</string>
    <string name="checkbox_like">Мне нравится</string>
    <string name="yes_button">Да</string>
    <string name="no_button">Нет</string>
    <string name="confirm_button">Вы действительно хотите выйти?</string>
    <string name="movies">Фильмы</string>
    <string name="favorites">Избранное</string>
    <string name="add_movie">Добавить фильм</string>
    <string name="movie_added_to_favorite">Фильм \'%s\' добавлен в избранное!</string>
    <string name="movie_removed_from_favorites">Фильм \'%s\' удален из избранного!</string>
    <string name="color_scheme">Цветовая схема</string>
    <string name="selected_color_scheme">День</string>
    <string name="navigation">Навигация</string>
    <string name="cancel">Отмена</string>
    <string name="load_error">Ошибка загрузки фильмов</string>
    <string name="thanks_for_feedback">Спасибо, Ваш отзыв принят!</string>
    <string name="retry">Повторить</string>
</resources>


