<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scroll"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="8dp">

                        <TextView
                            android:id="@+id/textViewAbout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_1_about"
                            style="@style/TextAbout"/>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/buttonInvite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/invite_btn_caption"
                    android:drawableStart="@drawable/ic_person_add_black_24dp"/>

                <TextView
                    android:id="@+id/textViewCommentLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextTitle"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/comment_label" />

                <EditText
                    android:id="@+id/editTextComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/comment_hint"
                    android:inputType="textMultiLine" />

                <CheckBox
                    android:id="@+id/checkBoxLike"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_like" />

                <Button
                    android:id="@+id/buttonReturnComment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/comment_button" />

            </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:collapsedTitleTextAppearance="@style/TextTitle.Collapsed"
            app:expandedTitleTextAppearance="@style/TextTitle.Expanded">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:maxHeight="420dp"
                app:srcCompat="@drawable/movie_1_big"
                app:layout_collapseMode="parallax"
                />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin"
                app:title="Collapsing toolbar"
                />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>